// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`QueryParametersDialog handles ARRAY type parameters correctly 1`] = `
<Blueprint6.Dialog
  className="query-parameters-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Dynamic query parameters"
>
  <div
    className="bp6-dialog-body"
  >
    <p>
      Druid SQL supports dynamic parameters using question mark 
      <ForwardRef>
        ?
      </ForwardRef>
       syntax, where parameters are bound positionally to ? placeholders at execution time.
    </p>
    <Blueprint6.FormGroup
      label="Parameter in position 1"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="ARRAY"
          />
        </Blueprint6.Popover>
        <Blueprint6.InputGroup
          fill={true}
          onChange={[Function]}
          placeholder="[-25.7, null, 36.85]"
          value="[1,2,3]"
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.FormGroup
      label="Parameter in position 2"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="ARRAY"
          />
        </Blueprint6.Popover>
        <Blueprint6.InputGroup
          fill={true}
          onChange={[Function]}
          placeholder="[-25.7, null, 36.85]"
          value="["a","b",null]"
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.FormGroup
      label="Parameter in position 3"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="ARRAY"
          />
        </Blueprint6.Popover>
        <Blueprint6.InputGroup
          fill={true}
          onChange={[Function]}
          placeholder="[-25.7, null, 36.85]"
          value="[]"
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.Button
      icon="plus"
      onClick={[Function]}
      text="Add parameter"
    />
  </div>
  <div
    className="bp6-dialog-footer"
  >
    <div
      className="bp6-dialog-footer-actions"
    >
      <Blueprint6.Button
        onClick={[Function]}
        text="Close"
      />
      <Blueprint6.Button
        intent="primary"
        onClick={[Function]}
        text="Save"
      />
    </div>
  </div>
</Blueprint6.Dialog>
`;

exports[`QueryParametersDialog matches snapshot 1`] = `
<Blueprint6.Dialog
  className="query-parameters-dialog"
  isOpen={true}
  onClose={[Function]}
  title="Dynamic query parameters"
>
  <div
    className="bp6-dialog-body"
  >
    <p>
      Druid SQL supports dynamic parameters using question mark 
      <ForwardRef>
        ?
      </ForwardRef>
       syntax, where parameters are bound positionally to ? placeholders at execution time.
    </p>
    <Blueprint6.FormGroup
      label="Parameter in position 1"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="VARCHAR"
          />
        </Blueprint6.Popover>
        <Blueprint6.InputGroup
          fill={true}
          onChange={[Function]}
          placeholder="Parameter value"
          value="Hello world"
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.FormGroup
      label="Parameter in position 2"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="TIMESTAMP"
          />
        </Blueprint6.Popover>
        <Blueprint6.InputGroup
          fill={true}
          onChange={[Function]}
          placeholder="2022-01-01 00:00:00"
          value="2022-02-02 01:02:03"
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.FormGroup
      label="Parameter in position 3"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="BIGINT"
          />
        </Blueprint6.Popover>
        <Memo(FancyNumericInput)
          arbitraryPrecision={false}
          fill={true}
          onValueChange={[Function]}
          value={42}
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.FormGroup
      label="Parameter in position 4"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="DOUBLE"
          />
        </Blueprint6.Popover>
        <Memo(FancyNumericInput)
          arbitraryPrecision={true}
          fill={true}
          onValueChange={[Function]}
          value={1.618}
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.FormGroup
      label="Parameter in position 5"
    >
      <Blueprint6.ControlGroup
        fill={true}
      >
        <Blueprint6.Popover
          boundary="clippingParents"
          captureDismiss={false}
          content={
            <Blueprint6.Menu>
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="VARCHAR"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="TIMESTAMP"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="BIGINT"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="DOUBLE"
              />
              <Blueprint6.MenuItem
                icon="blank"
                onClick={[Function]}
                text="FLOAT"
              />
              <Blueprint6.MenuItem
                icon="tick"
                onClick={[Function]}
                text="ARRAY"
              />
            </Blueprint6.Menu>
          }
          defaultIsOpen={false}
          disabled={false}
          fill={false}
          hasBackdrop={false}
          hoverCloseDelay={300}
          hoverOpenDelay={150}
          inheritDarkTheme={true}
          interactionKind="click"
          matchTargetWidth={false}
          minimal={true}
          openOnTargetFocus={true}
          position="bottom-left"
          positioningStrategy="absolute"
          shouldReturnFocusOnClose={false}
          targetTagName="span"
          transitionDuration={300}
          usePortal={true}
        >
          <Blueprint6.Button
            rightIcon="caret-down"
            text="ARRAY"
          />
        </Blueprint6.Popover>
        <Blueprint6.InputGroup
          fill={true}
          onChange={[Function]}
          placeholder="[-25.7, null, 36.85]"
          value="[-25.7,null,36.85]"
        />
        <Blueprint6.Button
          icon="trash"
          onClick={[Function]}
        />
      </Blueprint6.ControlGroup>
    </Blueprint6.FormGroup>
    <Blueprint6.Button
      icon="plus"
      onClick={[Function]}
      text="Add parameter"
    />
  </div>
  <div
    className="bp6-dialog-footer"
  >
    <div
      className="bp6-dialog-footer-actions"
    >
      <Blueprint6.Button
        onClick={[Function]}
        text="Close"
      />
      <Blueprint6.Button
        intent="primary"
        onClick={[Function]}
        text="Save"
      />
    </div>
  </div>
</Blueprint6.Dialog>
`;
